# balakey

./: .gitignore  .oxfmtrc.json  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml
src/: balakey.rs  file_set.rs  glob.rs  lib.rs  shared.rs  tasks.rs  walker.rs
tests/: index.test.ts  support.ts
tests/__snapshots__/: index.test.ts.snap
