[package]
name = "balakey"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = { version = "1.8.5", features = ["mmap", "rayon"] }
glob = "0.3.3"
napi = { version = "3", default-features = false, features = [
  "napi10",
  "async",
] }
napi-derive = "3"
rayon = "1.12.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
