[package]
name = "balakey"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = { version = "1.8.5", features = ["mmap", "rayon"] }
memmap2 = "0.9.11"
napi = { version = "3", default-features = false, features = ["napi10", "async"] }
napi-derive = "3"
rayon = "1.12.0"
wax = { version = "=0.7.0", features = ["walk"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
